tests/expected_invalid_phase_family_type.diag.out
<input>:13:23: error: phase family name 'AppConfig' is not a concrete type; use a concrete position such as 'AppConfig::Draft'
    public fn bad(config: AppConfig) -> Int {
                          ^^^^^^^^^
